bases/managers/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  annotations:
    k0s.reynn.net/resource-profile: mid
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: radarr
          image: linuxserver/radarr
          resources: {}
          ports:
            - containerPort: 7878
              name: tcp-server
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-covers
              mountPath: /config/MediaCover
            - name: downloads
              mountPath: /media/deadpool/downloads
            - name: movies
              mountPath: /media/deadpool/movies
            - name: anime-movies
              mountPath: /media/deadpool/anime_movies
            - name: stand-up
              mountPath: /media/deadpool/stand_up
            - name: animated
              mountPath: /media/deadpool/movies_animated
            - name: documentary
              mountPath: /media/deadpool/documentary
      volumes:
        - name: media-covers
          emptyDir: {}
        - name: downloads
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: movies
          hostPath:
            path: /media/deadpool/movies
            type: Directory
        - name: anime-movies
          hostPath:
            path: /media/deadpool/anime_movies
            type: Directory
        - name: stand-up
          hostPath:
            path: /media/deadpool/stand_up
            type: Directory
        - name: animated
          hostPath:
            path: /media/deadpool/movies_animated
            type: Directory
        - name: documentary
          hostPath:
            path: /media/deadpool/documentary
            type: Directory
        - name: config
          hostPath:
            path: /media/server/radarr/
            type: Directory
