bases/managers/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: tcp
      protocol: TCP
      port: 7878
      targetPort: 7878
      # nodePort: 30878
