bases/managers/radarr/ingress.caddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
    - host: radarr.reynn.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                number: 7878
  tls:
    - secretName: reynn-dev-ssl
      hosts:
        - radarr.reynn.dev
